manifests/apps/adventofcode-app/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: adventofcode-app
  annotations:
    secret.reloader.stakater.com/reload: backend-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/kubeside/images/adventofcode-backend@sha256:bedf02fa02971a271a6886b658054b427c9454d40484f27ba0c5d82f779a5803
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /opt/aoc/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: backend-config
            items:
              - key: config.json
                path: config.json
