manifests/apps/adventofcode-app/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: adventofcode-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
